[gd_scene load_steps=9 format=3 uid="uid://bb7l66mbcsmuq"]

[ext_resource type="Script" path="res://Assets/Port v2/taro_port.gd" id="1_6iaju"]
[ext_resource type="Texture2D" uid="uid://csr37dsoa3vje" path="res://Assets/Opdelt porte/taro_port_h.png" id="1_plmkk"]
[ext_resource type="Texture2D" uid="uid://3v5dhowmlvef" path="res://Assets/Opdelt porte/taro_port_v.png" id="2_i6lau"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ibbs"]
size = Vector2(64, 13)

[sub_resource type="Animation" id="Animation_ptvvp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_15os6"]
resource_name = "taro_port_closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 2.08165e-12), Vector2(17, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 2.08165e-12), Vector2(-13, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_1aula"]
resource_name = "taro_port_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 2.08165e-12), Vector2(33, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 2.08165e-12), Vector2(-33, 2.08165e-12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aml34"]
_data = {
"RESET": SubResource("Animation_ptvvp"),
"taro_port_closed": SubResource("Animation_15os6"),
"taro_port_open": SubResource("Animation_1aula")
}

[node name="Taro_port" type="StaticBody2D"]
script = ExtResource("1_6iaju")

[node name="taro_h" type="Sprite2D" parent="."]
position = Vector2(17, 2.08165e-12)
texture = ExtResource("1_plmkk")

[node name="taro_v" type="Sprite2D" parent="."]
position = Vector2(-13, 2.08165e-12)
texture = ExtResource("2_i6lau")

[node name="taro_port_collision" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_6ibbs")

[node name="ap_taro" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aml34")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="close_port"]
